# Gemini-SCC-JMDP

configfiles/said/: Esaid.py  Qsaid.py  config.nml  fac.py
configfiles/said_eq/: config.nml
gemext/: .gitmodules  CMakeLists.txt  README.md  Readme_cmake.md  Readme_dev.md  Readme_offline.md  build-offline.cmake  build-online.cmake  check-mpi3.cmake  options.cmake
gemext/archive/: build_zstd.cmake
gemext/cmake/: CheckMPI.cmake  ExtProj.cmake  FetchSource.cmake  FindGPG.cmake  compiler_id.c  compiler_id.cmake  git.cmake  lapack.cmake  libraries.json  mumps.cmake  scalapack.cmake  system_meta.cmake  tar.cmake  tar_create.cmake  toolchain.cmake
gemext/cmake/package/: cpackSign.cmake  cpack_hdf5.cmake  cpack_run.cmake  cpacker.cmake
gemext/ffilesystem/: CMakeLists.txt
gemext/glow/: CMakeLists.txt  README.md
gemext/glow/.github/workflows/: ci.yml
gemext/glow/cmake/: compilers.cmake
gemext/msis/: .gitmodules  CMakeLists.txt  CMakePresets.json  options.cmake
gemext/msis/.github/workflows/: ci.yml
gemext/msis/src/msis2/: CMakeLists.txt
gemext/msis/test/: CMakeLists.txt
gemext/scripts/: CheckTLS.cmake  build_hdf5.cmake  build_openmpi.cmake  online_install.cmake  package.cmake  package_no_cpack.cmake  requirements.cmake  requirements.json  versions.json
gemext/scripts/hdf5/: CMakeLists.txt
gemext/scripts/mpi/: CMakeLists.txt
gemext/scripts/mpi/test/: CMakeLists.txt
pygemini/src/gemini3d/particles/: __init__.py
quickstart/: gemini3d.job  gemini3d.job.o6838083  gemini3d.job.o6893423  gemini3d.job.o6928281  gemini3d.job.o7034908  gemini3d.job.o7087784  gemini3d.job.o7100483  gemini3d.job.o7103634  gemini3d.job.po6838083  gemini3d.job.po6893423  gemini3d.job.po6928281  gemini3d.job.po7034908  gemini3d.job.po7087784  gemini3d.job.po7100483  gemini3d.job.po7103634  run.sh
